Fix the way the job tracker handles jobs. This implementation fixes all the previous problems and respects all flags set to the tracker (stopOnClose and autoDelete).

BUG: 154925
CCMAIL: ervin@kde.org, faure@kde.org

svn path=/trunk/KDE/kdelibs/; revision=828695