kdecore/jobs/kjobtrackerinterface.cpp
@@ -45,6 +45,8 @@ KJobTrackerInterface::~KJobTrackerInterface()
 
 void KJobTrackerInterface::registerJob(KJob *job)
 {
+    QObject::connect(job, SIGNAL(result(KJob*)),
+                     this, SLOT(unregisterJob(KJob*)));
     QObject::connect(job, SIGNAL(finished(KJob*)),
                      this, SLOT(finished(KJob*)));
 
@@ -76,6 +78,8 @@ void KJobTrackerInterface::registerJob(KJob *job)
 
 void KJobTrackerInterface::unregisterJob(KJob *job)
 {
+    QObject::disconnect(job, SIGNAL(result(KJob*)),
+                        this, SLOT(unregisterJob(KJob*)));
     QObject::disconnect(job, SIGNAL(finished(KJob*)),
                         this, SLOT(finished(KJob*)));
 
